[package]
name = "poc-testcontainers"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
gcloud-pubsub = "1.5.0"
gcloud-gax = "1.3.1"
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.2.0", features = [
  "pubsub",
] }
tokio = { version = "1.45.1", features = ["full", "macros"] }
tokio-util = "0.7"
tokio-stream = "0.1.17"
testcontainers = "0.25"

[dev-dependencies]

